--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
   <!-- Banner --> 
   <h1 class="bday-banner">
     <span>Happy</span> <span>Birthday</span>
-    <span>Romana</span>
+    <span>Tithi</span>
   </h1> 
 
    <!-- Message + decoration -->
   <div class="bday-message bday-message--paper">
-    <p>Wish you a many many happy returns of the day. May God bless you with health, wealth and prosperity in your life. Happy birthday Romana</p> 
+    <p>Wish you a many many happy returns of the day. May God bless you with health, wealth and prosperity in your life. Happy birthday Tithi</p> 
     <p class="bday-decor bday-decor--bottom-right zoom-left-in-out">🎉</p>
   </div>
 
